# minimal-rs

./: .env  Cargo.toml  README.md
src/: main.rs
