[package]
name = "minimal-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.105"
thiserror = "1.0.46"
tokio = { version = "1.31.0", features = ["full"] }
